# llm-assistant-v2

./: .dockerignore  .env.sample  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts  vitest.config.mts  vitest.setup.ts
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-and-deploy.yml  build-devcontainer.yml  deploy-flow.yml
litellm/: README.md  pyproject.toml
mocks/: server.ts
mocks/handlers/: pdf.ts
playgrounds/: download.ts
scripts/: delete-global-commands.ts  delete-guild-commands.ts  deploy-guild-commands.ts  llm-playground.ts
src/: commands.ts
src/ask-llm/: command.test.ts  index.test.ts  index.ts
src/command-utils/: deploy.ts
src/discord/: command-builder.ts  deploy.ts
src/llm/: ask.command.test.ts  ask.command.ts  client.ts  playground.ts  select-model-autocomplete.test.ts  select-model-autocomplete.ts  utils.ts
src/review-resume/: command.test.ts  command.ts  downloader.ts  index.test.ts  index.ts  read.ts  reader.ts  utils.ts
src/utils/: date.ts  load-env.ts
